# container-startup-time-reduction

./: LICENSE  LICENSE.GPL-2-only  NOTICE.containerd  README.md
benchmarks/: .gitignore  analysis-containerd.py  analysis.py  benchmark.py
execution-manager-config/: README.md  bundle_helper.py  extract_layers.py  generate_configs.py
execution-manager-config/common/: helper.py
meta-execution-manager/conf/: layer.conf
meta-execution-manager/recipes-containers/containerd/: containerd-opencontainers_git.bbappend
meta-execution-manager/recipes-containers/containerd/containerd-opencontainers/: 0001-Add-build-option-GODEBUG-1.patch  0001-Makefile-allow-GO_BUILD_FLAGS-to-be-externally-speci.patch
meta-execution-manager/recipes-containers/crun/: crun_git.bbappend
meta-execution-manager/recipes-devtools/go/: go-1.17.12.inc  go-common.inc  go-md2man_git.bb  go-runtime.inc
meta-execution-manager/recipes-execution-manager/execution-manager/: execution-manager_0.1.bb
meta-execution-manager/recipes-execution-manager/execution-manager-containerd/: execution-manager-containerd_0.1.bb
vsomeip-application/: build_scratch_containers.sh
vsomeip-application/vsomeip-application/: Dockerfile.release
vsomeip-application/vsomeip-application/generic/: CMakeLists.txt  main.cpp  service_ids.hpp
vsomeip-application/vsomeip-base/: Dockerfile.build  Dockerfile.release
vsomeip-application/vsomeip-base/patches/: configuration-header.patch  configuration.patch  timestamp-log.patch
vsomeip-application/vsomeip-daemon/: Dockerfile.release
(+46 files in other folders)
